--- a/templates/book.html
+++ b/templates/book.html
@@ -2,6 +2,10 @@
 {% block title %}Book details!{% endblock %}
 
 {% block body %}
-    <h1>This will display book details</h1>
+    <h1>{{book['title']}}</h1>
+
+    <img src="{{ book['imageLinks']['thumbnail']}}">
+    <p>By: {{book['authors']}}</p>
+    <p>{{book['description']}}</p>
 
 {% endblock %}
