--- a/templates/user.html
+++ b/templates/user.html
@@ -2,6 +2,6 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>This will display a user</h1>
+    <h1>{{user.username}}</h1>
 
 {% endblock %}
