--- a/templates/user.html
+++ b/templates/user.html
@@ -5,16 +5,27 @@
     <h1>{{user.username}}</h1>
 
     <h2>Collections:</h2>
+
+    <form action='/create_collection'>
+        <div>
+            <label for='collection_name'>Create a new collection</label>
+            <input type='text' name='collection_name' id='collection_name_other'> 
+        </div>
+        <input type='submit' value="Create">
+    </form>
+
     <div>
         {% for each in user.collections %}
             <h3>{{each.collection_type[0].upper() + each.collection_type[1:]}}</h3>
             {% for i in range(10) %}
-                <div>
-                    {% if each.books[i].cover_img != None %}
-                    <image src="{{ each.books[i].cover_img }}"></image>
-                    {% endif %}
-                    <a href="/book?gi={{each.books[i].google_id}}">{{each.books[i].title}}</a>     
-                </div>
+                {% if i < each.books|length %}
+                    <div>
+                        {% if each.books[i].cover_img != None %}
+                        <image src="{{ each.books[i].cover_img }}"></image>
+                        {% endif %}
+                        <a href="/book?gi={{each.books[i].google_id}}">{{each.books[i].title}}</a>     
+                    </div>
+                {% endif %}
             {% endfor %}
 
             <a href="/collection?collection={{each.id}}">See all books in this collection</a>
