--- a/templates/results.html
+++ b/templates/results.html
@@ -11,4 +11,10 @@
             <a href="/book?gi={{book.google_id}}">{{book.title}}</a>     
         </div>
     {% endfor %}
+
+    {% if results == [] %}
+        <p>No results found</p>
+        <a href="/search">Search again</a>   
+    {% endif %}
+
 {% endblock %}
