--- a/templates/user.html
+++ b/templates/user.html
@@ -5,18 +5,19 @@
     <h1>{{user.username}}</h1>
 
     <h2>Collections:</h2>
-
-    <form action='/create_collection'>
-        <div>
-            <label for='collection_name'>Create a new collection</label>
-            <input type='text' name='collection_name' id='collection_name_other'> 
-        </div>
-        <input type='submit' value="Create">
-    </form>
+    {% if user.id == session_user.id %}
+        <form action='/create_collection'>
+            <div>
+                <label for='collection_name'>Create a new collection</label>
+                <input type='text' name='collection_name' id='collection_name_other'> 
+            </div>
+            <input type='submit' value="Create">
+        </form>
+    {% endif %}
 
     <div>
         {% for each in user.collections %}
-            <h3>{{each.collection_type[0].upper() + each.collection_type[1:]}}</h3>
+            <h3>{{' '.join(each.collection_type.split('_')).title()}}</h3>
             {% for i in range(10) %}
                 {% if i < each.books|length %}
                     <div>
