--- a/templates/collection.html
+++ b/templates/collection.html
@@ -17,7 +17,7 @@
     {% endfor %}
 
     <br>
-    {% if pages < 5 %}
+    {% if pages < 1 %}
         <div>
             {% for num in range(1, pages+1)%}
                 {% if num == page %}
@@ -55,11 +55,9 @@
                 <a class='pagination'>{{pages}}</a>
             {% endif %}
             <br>
-            <form class='pagination' id='jumpcollection' action='/collection'>
-                <input type="text" name='page'>
-                <input type='submit' value='Jump to page'>
-                
-            </form>
+            <div>
+                <input id=jumppagecollection type="text" name='page'>
+                <button id=jumpcollection>Jump to page</button>
         </div>
     {% endif %}
 {% endblock %}
