Blocks user from jumping to an out of bounds page

--- a/templates/collection.html
+++ b/templates/collection.html
@@ -3,7 +3,7 @@
 
 {% block body %}
    
-    
+    <meta id='pages-java' data-count='{{pages}}'>
     <h1>{{collection.user.username.title()}}'s {{" ".join(collection.collection_type.split("_")).title()}} 
         Collection</h1>
     {% for i in range(((page-1)*25), page*25): %}
