A user cannot delete a book from another user's collection

--- a/templates/collection.html
+++ b/templates/collection.html
@@ -11,12 +11,12 @@
                 {% if collection.books[i].cover_img != None %}
                 <image src="{{ collection.books[i].cover_img }}"></image>
                 {% endif %}
-                <a href="/book?gi={{collection.books[i].google_id}}">{{collection.books[i].title}}</a>     
-                <form action="/delete_book/{{collection.books[i].google_id}}/{{collection.id}}">
-                        <input type='submit' value="Delete from Collection">
-                    </div>
-                </form>
-            
+                <a href="/book?gi={{collection.books[i].google_id}}">{{collection.books[i].title}}</a>   
+                {% if collection.user == user %}  
+                    <form action="/delete_book/{{collection.books[i].google_id}}/{{collection.id}}">
+                            <input type='submit' value="Delete from Collection">
+                    </form>
+                {% endif %}
             </div>
         {% endif %}
     {% endfor %}
