Implemented Log out function and button

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,16 +22,15 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    
+      {% if user %}
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/user">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/search">Search</a>
-          </li>
-          {% if user %}
+            <li class="nav-item">
+              <a class="nav-link" href="/search">Search</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 My Collections
@@ -43,8 +42,11 @@
                 {% endfor %}
               </div>
             </li>
-          {% endif %}
-      </div>
+            <li class="nav-item">
+              <a class="nav-link" href="/log_out">Log Out</a>
+            </li>
+        </div>
+      {% endif %}
     </nav>
     
     {% for msg in get_flashed_messages() %}
