--- a/templates/collection.html
+++ b/templates/collection.html
@@ -23,6 +23,28 @@
                     <form action="/delete_book/{{collection.books[i].google_id}}/{{collection.id}}">
                             <input type='submit' value="Delete from Collection">
                     </form>
+                    {% if collection.collection_type == 'to_read' %}
+                        <p>Lendable from</p>
+                        {% for friend in user.friends %}
+                            {% if user in friend.friends %}
+                                {% for each in friend.collections %}
+                                    {% if each.lendable %}
+                                        {% if collection.books[i] in each.books %}
+
+                                            <a href='/user?id={{friend.id}}'>{{friend.username}}</a>
+                                            <form action="/request_book/{{collection.books[i].google_id}}/{{collection.id}}">
+                                                <input type='submit' value="Request to borrow">
+                                            </form>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% elif collection.lendable %}
+                    <form action="/request_book/{{collection.books[i].google_id}}/{{collection.id}}">
+                        <input type='submit' value="Request to borrow">
+                    </form>
                 {% endif %}
             </div>
         {% endif %}
